--- a/app/assets/stylesheets/lycee.css.scss
+++ b/app/assets/stylesheets/lycee.css.scss
@@ -69,7 +69,7 @@ $bar_background__bottom: #dee698;
 #intro {
 	color:#8C1C32;
 	font-size:larger;
-	line-height: 26px;
+	/*line-height: 26px;*/
 }
 #main_text {
 	width: 400px;
