--- a/app/assets/stylesheets/requests.css.scss
+++ b/app/assets/stylesheets/requests.css.scss
@@ -27,7 +27,7 @@ body {
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
-  line-height: 18px; }
+  /*line-height: 18px;*/ }
   
 .content {
 	padding-top:10px;
